samples/_failures_safe/1761449714_3604e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_70ee22c9.c: In function ‘main’:
./samples/SAFE/__tmp_70ee22c9.c:148:5: error: expected expression at end of input
  148 |     for (int i = 0; i < display_count; i++)
      |     ^~~
./samples/SAFE/__tmp_70ee22c9.c:148:5: error: expected declaration or statement at end of input
